tests/v0_4/invalid/step_undefined.devops
target "local" {
  address = "localhost"
}

// Node references non-existent step
node "deploy" {
  type = undefined_step
  targets = [local]
}
